--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+        <form action="">
+            <h1>Day Of The Dead<br>Offering</h1>
+            <div>
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name">
+            </div>
+            
+
+
+        </form>
+    </main>
 
     <footer>
         <nav class="bottom_nav">
