--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
             <h1>Day Of The Dead<br>Offering</h1>
             <div>
                 <label for="name">Name</label>
-                <input type="text" id="name" name="name">
+                <input type="text" id="name" name="name" placeholder="John Doe" required>
             </div>
-            
-
-
+            <div>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="JohnDoe@gmail.com" required>
+            </div>
+            <div>
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username">
+            </div>
         </form>
     </main>
 
