--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
             </div>
             <div>
                 <label for="username">Username</label>
-                <input type="text" id="username" name="username">
+                <input type="text" id="username" name="username" placeholder="JDoe24">
             </div>
+            <button>Submit</button>
         </form>
     </main>
 
