--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <main>
         <form action="">
+            <span></span>
             <h1>Day Of The Dead<br>Offering</h1>
             <div>
                 <label for="name">Name</label>
